# windows-redirector

./: Cargo.toml  DYNAMIC_LOADING_MIGRATION.md  FFI_API.md  README.md
go/: go.mod
go/example/: main.go
go/redirector/: redirector.go
src/: dyn_windivert.rs  ffi.rs  lib.rs  main.rs
