[package]
name = "windows-redirector"
version = "0.1.0"
authors = ["example <example@example.com>"]
edition = "2021"
rust-version = "1.70"
license = "LGPL-3.0-or-later"
description = "Windows network traffic redirector FFI library"
publish = false

# Remove the [[bin]] section since we only want a library
[lib]
name = "windows_redirector"
crate-type = ["cdylib", "staticlib"]

# Target-specific dependencies for Windows
[target.'cfg(windows)'.dependencies]
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "sync", "io-util", "time"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
libloading = "0.8"
lru_time_cache = "0.11.11"
log = "0.4.22"
env_logger = "0.11.5"
smoltcp = "0.9.0"
internet-packet = { version = "0.2.0", features = ["checksums"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "handleapi", "minwindef"] }

[target.'cfg(windows)'.dev-dependencies]
hex = "0.4.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
ProductName = "Windows Redirector FFI Library"
FileDescription = "FFI library for network traffic redirection"
